# cairn-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
ai/: AGENTS.md  CLAUDE.md  copilot-instructions.md  cursor-rules.md
branding/: PHILOSOPHY.md  render_banner.py  render_logo.py  render_social.py  render_svg.py
docs/: agent-integration.md  configuration.md  prompt-injection-safety.md
examples/jsonl/: config.yaml  logs.jsonl
examples/postgres/: config.yaml
examples/sqlite/: config.yaml  create_sample_db.py
src/cairn_mcp/: __init__.py  config.py  prompts.py  py.typed  redaction.py  schema.py  server.py  tools.py
src/cairn_mcp/backends/: __init__.py  base.py  jsonl.py  postgres.py  registry.py  sqlite.py
tests/: test_config.py  test_config_hardening.py  test_default_aggregate.py  test_jsonl_backend.py  test_multi_source.py  test_postgres_integration.py  test_postgres_sql.py  test_postgres_stats_bounds.py  test_prompts_and_docs.py  test_redaction.py  test_redaction_hardening.py  test_registry.py  test_registry_hardening.py  test_schema.py  test_sqlite_backend.py  test_sqlite_scan_limit.py  test_tools.py
